--- a/Resources/views/layout/macros.html.twig
+++ b/Resources/views/layout/macros.html.twig
@@ -42,7 +42,7 @@
                 {% if item.icon %} <i class="{{ item.icon }}"></i> {% endif %}
                 <span>{{ item.label }}</span>
                 {% if item.badge %}
-                    <small class="label pull-right bg-{{ item.badgeColor }}">{{ item.badge }}</small>
+                    <small class="label pull-right bg-{{ item.badgeColor }}" {{item.icon ? "style='right:30px'"}}>{{ item.badge }}</small>
                 {% endif %}
                 {% if item.hasChildren %}<i class="fa fa-angle-left pull-right"></i>{% endif %}
             </a>
